adicionando funcao de editar e excluir tarefas

--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
 
 <body>
   <main class="container">
-    <div class="toDo-container">
+    <div class="todo-container">
 
       <h1 class="to-do-title">Sua lista de tarefas</h1>
 
-      <form id="add-form" class="form-control">
-        <div class="input-area">
-          <label for="add-tarefa">Adicionar tarefa</label>
+      <div id="add-form-div">
+        <form class="form-control">
+          <div class="input-area">
+            <label for="add-tarefa">Adicionar tarefa</label>
 
-          <input type="text" id="add-input" placeholder="O que você quer fazer?">
-        </div>
+            <input type="text" id="add-input" placeholder="O que você quer fazer?">
+          </div>
 
-        <button type="submit"><i class="fa-solid fa-plus"></i></button>
-      </form>
+          <button type="submit"><i class="fa-solid fa-plus"></i></button>
+        </form>
+      </div>
 
-      <div class="hide">
+
+      <div id="edit-form-div" class="hide">
         <form id="edit-form" class="form-control">
 
           <div class="input-area">
@@ -66,43 +69,11 @@
         </div>
       </div>
 
-      <ul class="toDo-list">
-        <li class="toDo-item">
-          <p>Estou fazendo algo aqui...</p>
+      <div id="todo-list-div">
+        <ul class="todo-list">
+        </ul>
+      </div>
 
-          <div class="btn-todo">
-            <button type="button" class="edit-todo">
-              <i class="fa-solid fa-pencil"></i>
-            </button>
-
-            <button type="button" class="finish-todo">
-              <i class="fa-solid fa-check"></i>
-            </button>
-
-            <button type="button" class="remove-todo">
-              <i class="fa-solid fa-minus"></i>
-            </button>
-          </div>
-        </li>
-
-        <!-- <li class="toDo-item done">
-          <p>Estou fazendo algo aqui...</p>
-
-          <div class="btn-todo">
-            <button type="button" class="edit-todo">
-              <i class="fa-solid fa-pencil"></i>
-            </button>
-
-            <button type="button" class="finish-todo">
-              <i class="fa-solid fa-check"></i>
-            </button>
-
-            <button type="button" class="remove-todo">
-              <i class="fa-solid fa-minus"></i>
-            </button>
-          </div>
-        </li>  -->
-      </ul>
     </div>
   </main>
 
